# lttng-ci

./: .editorconfig  .gitignore  .gitreview  .pre-commit-config.yaml  .travis.yml  AUTHORS  README.md  pyproject.toml  tox.ini
automation/: create-slave.sh  kernel-seed.py  preseed.cfg  update_standalone.py
babeltrace/: babeltrace-master.sh  babeltrace-stable-1.1.sh  babeltrace-stable-1.2.sh
dsl/: kernel-lttng-modules.seed.groovy  kernel-lttng-modules.seed.groovy.orig
etc/: jenkins_jobs.ini-sample
jjb_filters/: __init__.py
jobs/: babeltrace-benchmark.yaml  babeltrace-www.yaml  babeltrace.yaml  barectf.yaml  binutils-gdb.yaml  ctf-java.yml  dev.yaml  diamon-www.yaml  efficios-www.yaml  glibc.yaml  images.yml  integration.yaml  jabberwocky.yml  kernel.yaml  latency-tracker.yaml  libdelorean-java.yml  librseq.yaml  libside.yaml  libsk.yaml  liburcu.yaml  linux-rseq.yaml  linux.yml  lttng-analyses.yaml  lttng-baremetal-tests.yaml  lttng-docs.yaml  lttng-ivc.yaml  lttng-modules.yaml  lttng-scope.yaml  lttng-scope.yml  lttng-tools.yaml  lttng-ust-benchmarks.yaml  lttng-ust-java-tests.yaml  lttng-ust.yaml  lttng-www.yaml  normand.yaml  ops_job-generator_kernel.yaml  system-tests.yaml  tracecompass.yml
lava/: deploy_devices_dict.sh  upload_artifact.sh
lttng-modules/: lttng-modules-dsl-master.sh
lttng-tools/: lttng-tools-master-test-joraj.sh  lttng-tools-master.sh
lttng-ust/: lttng-ust-master.sh  lttng-ust-stable-2.5.sh  lttng-ust-stable-2.6.sh
packaging/: el7-add-efficios-repo.sh  el7-enable-and-start-relayd.sh  el7-enable-and-start-sessiond.sh  el7-test-run.sh  (+1 more)
(+590 files in other folders)
