[tool.poetry]
name = "lttng-ci"
version = "0.1.0"
description = "Configuration for ci.lttng.org"
authors = [
    "Michael Jeanson <mjeanson@efficios.com>",
    "Kienan Stewart <kstewart@efficios.com>",
]
license = "GPL-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jenkins-job-builder = "^6.4.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]

[tool.isort]
profile = "black"
